--- a/Film.html
+++ b/Film.html
@@ -49,49 +49,49 @@
 
         <header id="bar">
             <div class="container-fluid menu">
-                <div class="row">
-                    <div>
-                        <!--le menu-->
-                        <div class="row men1">
-                            <div class="col" id="ecran1">
-                                <section class="buttons">
 
-                                    <a href="index.html" class="btn btn-1 btnanim">
-                                        <p>Accueil</p>
-                                    </a>
-                            </div>
-                            <div class="col">
-                                <section class="buttons">
-                                    <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
-                                        <p>Ateliers</p>
-                                    </a>
-                            </div>
-                            <div class="col">
-                                <section class="buttons">
-                                    <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
-                                        <p>Notre Cinéma</p>
-                                    </a>
-                            </div>
-                            <div class="col">
-                                <section class="buttons">
-                                    <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
-                                        <p>Contact</p>
-                                    </a>
-                            </div>
-                        </div>
-                        <div class="row men2">
-                            <div class="col">
-                                <a href="index.html" class="btnanim">
-                                    <img src=Img-logo\logo.png class="logo" title="Notre logo" alt="Notre logo">
-                                </a>
-                            </div>
-                        </div>
+
+                <!--le menu-->
+                <div class="row men1">
+                    <div class="col">
+                        <section class="buttons">
+
+                            <a href="index.html" class="btn btn-1 btnanim">
+                                <p>Accueil</p>
+                            </a>
                     </div>
-
-                    <!--ici le logo-->
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                                <p>Ateliers</p>
+                            </a>
+                    </div>
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                                <p>Notre Cinéma</p>
+                            </a>
+                    </div>
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                                <p>Contact</p>
+                            </a>
+                    </div>
                 </div>
-                <!--ici le logo-->
+                <div class="row men2">
+                    <div class="col">
+                        <a href="index.html" class="btnanim">
+                            <img class="logo" src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
+                        </a>
+
+                    </div>
+                </div>
             </div>
+
+            <!--ici le logo-->
+
+            <!--ici le logo-->
             </div>
         </header>
 
