--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <section id="panels-container">
         <div class="panel panel--left is-opened ">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1422.917" height="800" viewBox="0 0 1422.917 800">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100vw" height="100vh" viewBox="0 0 1422.917 800">
                 <path id="slide_gauche" data-name="slide gauche"
                     d="M0,0V800H1048.417c228.875-191.073,374.5-478.531,374.5-800Z" fill="#810000" />
             </svg>
@@ -337,7 +337,7 @@
                             Cofondateur de Flip-Book
                             Et passionné d'animation</p>
                         <ul>
-                            <li>
+                            <li id="ecran7" class="title-anchor">
                                 <p class="row rightText">Contact :
                                     05.56.51.76.60
                                     contact@cinemalefestival.fr</p>
