dernier bug puce filme

--- a/Film.html
+++ b/Film.html
@@ -54,7 +54,7 @@
                 <!--le menu-->
                 <div class="row men1">
                     <div class="col">
-                        <section class="buttons">
+                        <section class="buttons" id="ecran1" class="title-anchor">
 
                             <a href="index.html" class="btn btn-1 btnanim">
                                 <p>Accueil</p>
