--- a/index.html
+++ b/index.html
@@ -314,9 +314,10 @@
                     <h2 class="title-anchor distantdos " class="black">Nos Contacts </h2>
                     <div class="rightText distantuno">
                         <p>
-                            05.56.51.76.60
+                            05.56.51.76.60<br>
+                            
+                            09.51.99.04.80<br>
                             contact@cinemalefestival.fr
-                            09.51.99.04.80
                     </div>
                 </div>
             </div>
@@ -325,8 +326,9 @@
                 <!--div avec la team cinema-->
 
                 <div class="col rightText">
-                    <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
+                    
                     <div class="container-fluid ">
+                        <h2 id="ecran6" class="title-anchor" class="no-black">Notre équipe : </h2>
                         <div class="row ">
                             <div class="col ariere1">
                                 <h3>Fabrice</h3>
