--- a/Film.html
+++ b/Film.html
@@ -117,7 +117,7 @@
             <div class="row suit">
                 <div class="col">
 
-                    <h2 id="ecran2" class="title-anchor distantdos">Nos Films d'animation</h2>
+                    <h2 id="ecran2" class="title-anchor distantdos">Films a l'affiche</h2>
 
                     <section class="center slider2">
                         <div>
@@ -152,7 +152,7 @@
 
                 </div>
                 <div class="col">
-                    <h2 id="ecran3" class="title-anchor distantdos">Nos Films de Tim Burton</h2>
+                    <h2 id="ecran3" class="title-anchor distantdos">Les avant-premieres</h2>
 
                     <section class="center slider2">
                         <div>
@@ -186,7 +186,7 @@
 
                 </div>
                 <div class="col">
-                    <h2 id="ecran4" class="title-anchor distantdos">Nos Films d'Asianime</h2>
+                    <h2 id="ecran4" class="title-anchor distantdos">Les sceances speciales</h2>
 
                     <section class="center slider2">
                         <div>
@@ -220,7 +220,7 @@
 
                 </div>
                 <div class="col">
-                    <h2 id="ecran5" class="title-anchor distantdos">Nos Films en projections special</h2>
+                    <h2 id="ecran5" class="title-anchor distantdos">Le coin des tout-petits</h2>
 
                     <section class="center slider2">
                         <div>
@@ -254,7 +254,7 @@
 
                 </div>
                 <div class="col">
-                    <h2 id="ecran6" class="title-anchor distantdos">Nos Films familiaux</h2>
+                    <h2 id="ecran6" class="title-anchor distantdos">Les films a venir prochainment</h2>
 
                     <section class="center slider2">
                         <div>
