--- a/index.html
+++ b/index.html
@@ -415,13 +415,15 @@
                     <div class=col>
                         <p></p>
                     </div>
-                    <div class=col><a href="https://www.facebook.com/cinemalefestival">
+                    <div class=col>
+                        <a href="https://www.facebook.com/cinemalefestival">
                             <img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook">
                         </a>
-                    </div>
-                    <div class=col><a href="https://www.instagram.com/cinemalefestival/">
+                        <a href="https://www.instagram.com/cinemalefestival/">
                             <img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
                         </a>
+                    </div>
+                    <div class=col>
                     </div>
                 </div>
                 <div class="row">
