--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="col">
                     <!-- texte de bienvenu-->
                     <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
-                    <h3 class="distantuno">Specialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !
+                    <h3 class="distantuno">Spécialisé dans le cinéma d'animation <br> et d'éfféts spéciaux à Bègles !
                     </h3>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                                 <section class="buttons2 ">
                                     <span class="btn-2 btn-3 "
                                         style="background-image: url(./img-logo/animation.png);  background-position: center; background-size: inherit;">
-                                        <p class="BS" style="position: absolute; padding-top: 150%;">Initiation dessin
+                                        <p class="BS" style="position: absolute; padding-top: 150%;">Initiation déssin
                                             animés</p>
                                     </span>
                                 </section>
