--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
                     </div>
                     <div class="col">
                         <section class="buttons">
-                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                            <a href="" class="btn btn-1 btnanim">
                                 <p>Ateliers</p>
                             </a>
                     </div>
                     <div class="col">
                         <section class="buttons">
-                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                            <a href="" class="btn btn-1 btnanim">
                                 <p>Notre Cinéma</p>
                             </a>
                     </div>
                     <div class="col">
                         <section class="buttons">
-                            <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                            <a href="" class="btn btn-1 btnanim">
                                 <p>Contact</p>
                             </a>
                     </div>
