--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col">
                     <!-- div contact-->
-                    <h2 class="title-anchor distantdos " class="black"Co>ntact </h2>
+                    <h2 class="title-anchor distantdos " class="black">Contact </h2>
                     <div class="rightText distantuno">
                         <p>
                             05.56.51.76.60<br>
