--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <section class="buttons2 ">
                                     <span class="btn-2 btn-3 "
                                         style="background-image: url(./img-logo/animation.png);  background-position: center; background-size: inherit;">
-                                        <p class="BS" style="position: absolute; padding-top: 150%;">Initiation dessin
+                                        <p class="BS" style="position: absolute; padding-top: 150%;">Initiation dessins
                                             animés</p>
                                     </span>
                                 </section>
