--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                     </p>
                                 <ul>
                                     <li id="ecran7" class="title-anchor">
-                                        <p class="row rightText">Contact :
+                                        <p class="row rightText">
                                             05.56.51.76.60 </br>
                                             contact@cinemalefestival.fr</p>
                                     </li>
@@ -355,7 +355,7 @@
                                 </p>
                                 <ul>
                                     <li>
-                                        <p class=" rightText">Contact :
+                                        <p class=" rightText">
                                             05.56.51.76.60</br>
                                             contact@cinemalefestival.fr</p>
                                     </li>
@@ -373,7 +373,7 @@
                                     </p>
                                     <ul>
                                         <li>
-                                            <p class="rightText">Contact :
+                                            <p class="rightText">
                                                 05.56.51.76.60</br>
                                                 contact@cinemalefestival.fr</p>
                                         </li>
