--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row entitle">
                 <div class="col">
                     <!-- texte de bienvenu-->
-                    <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
+                    <h1 class="big">Bienvenue au Cinéma Le Festival !</h1>
                     <h3 class="distantuno">Spécialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !
                     </h3>
                 </div>
