--- a/Film.html
+++ b/Film.html
@@ -111,7 +111,7 @@
             <div class="row sectitle" id="ecran0">
                 <div class="col">
 
-                    <h1 class="tall">Voici notre selection de film :</h1>
+                    <h1 class="tall">Voici notre séléction de films :</h1>
                 </div>
             </div>
             <div class="row suit">
