--- a/Film.html
+++ b/Film.html
@@ -346,7 +346,7 @@
                         <h3>Contact</h3>
                     </a>
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Atelier</h3>
+                        <h3>Ateliers</h3>
                     </a>
                 </div>
                 <div class="row">
