--- a/Film.html
+++ b/Film.html
@@ -340,14 +340,15 @@
                         <h3>Accueil</h3>
                     </a>
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
+                        <h3>Ateliers</h3>
+                    </a>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Notre Cinéma</h3>
                     </a>
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Contact</h3>
                     </a>
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Atelier</h3>
-                    </a>
+                    
                 </div>
                 <div class="row">
                     <div class=col> <a href="index.html"><img src=img-logo\logo.png title="notre logo"
