--- a/Film.html
+++ b/Film.html
@@ -336,8 +336,11 @@
             <div class="container">
                 <div class="row">
                     <!--les boutons menu-->
-                    <a href="index.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Accueil</h3>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
+                        <h3>Programmation</h3>
+                    </a>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
+                        <h3>Ateliers</h3>
                     </a>
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Notre Cinéma</h3>
@@ -345,9 +348,7 @@
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Contact</h3>
                     </a>
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Ateliers</h3>
-                    </a>
+                    
                 </div>
                 <div class="row">
                     <div class=col> <a href="index.html"><img src=img-logo\logo.png title="notre logo"
@@ -355,13 +356,15 @@
                     <div class=col>
                         <p></p>
                     </div>
-                    <div class=col><a href="https://www.facebook.com/cinemalefestival">
+                    <div class=col>
+                        <a href="https://www.facebook.com/cinemalefestival">
                             <img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook">
                         </a>
-                    </div>
-                    <div class=col><a href="https://www.instagram.com/cinemalefestival/">
+                        <a href="https://www.instagram.com/cinemalefestival/">
                             <img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
                         </a>
+                    </div>
+                    <div class=col>
                     </div>
                 </div>
                 <div class="row">
@@ -371,7 +374,7 @@
                     <p>Notre adresse :
                         151 Boulevard ALBERT 1er
                         33130 Bègles</p>
-                    <p>© 2012 Cinéma "Le Festival" de Bègles, tout droits réservés – Mentions légales – Site réalisé par
+                    <p>© 2020 Cinéma "Le Festival" de Bègles, tout droits réservés – Mentions légales – Site réalisé par
                         Dessert
                         Web</p>
                 </div>
