--- a/Film.html
+++ b/Film.html
@@ -336,8 +336,8 @@
             <div class="container">
                 <div class="row">
                     <!--les boutons menu-->
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Programmation</h3>
+                    <a href="index.html" class="col" style="text-decoration: underline; color: white;">
+                        <h3>Accueil</h3>
                     </a>
                     <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Ateliers</h3>
