--- a/Film.html
+++ b/Film.html
@@ -82,7 +82,7 @@
                 <div class="row men2">
                     <div class="col">
                         <a href="index.html" class="btnanim">
-                            <img class="logo" src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
+                            <img class="logo" src=Img-logo\logo1.png title="Notre logo" alt="Notre logo">
                         </a>
 
                     </div>
