--- a/Film.html
+++ b/Film.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Domine&family=domine:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
 
 </head>
