--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Domine&family=domine:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
 
 </head>
@@ -298,7 +298,7 @@
             </div>
         </div>
 
-        <div id="ecran5" class="container-fluid" style="padding: 0;">
+        <div id="ecran5" class="container" style="padding: 0;">
             <div>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
