last modif before time's up

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
 
 
-            <div id="ecran3" class="row serv" style="background-image:url(./img-logo/service_bg.png);">
+            <div id="ecran3" class="row serv" >
                 <div class="col">
                     <h2 class="title-anchor distantdos">Nos Services</h2>
                     <div class="container-fluid">
@@ -253,7 +253,7 @@
                                         <h3>Ici vous pouvez retrouver des informations <br> au sujet de notre cinéma
                                         </h3>
                                     </div>
-                                    <div class="row rightText">
+                                    <div class="row rightTextSec">
                                         <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables
                                             pour tous, des
                                             séances <br>
@@ -269,7 +269,7 @@
                                             film<br>
                                             d'animation pour la petite enfance ''Les P'tits Cartooneurs'' !</p>
                                     </div>
-                                    <div class="row rightText">
+                                    <div class="row rightTextSec">
                                         <ul>
                                             <li>
                                                 <p>Deux salles Paul GRIMAULT et René LALOUX (290 et 78 places)</p>
@@ -285,7 +285,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="row rightText">
+                                    <div class="row rightTextSec">
                                         <p>Autant de bonnes raisons de venir au Cinéma ''Le Festival'' !</p>
                                     </div>
                                 </div>
@@ -306,12 +306,12 @@
             </div>
             <!--mettre la carte google ici-->
         </div>
-        <div class=" container-fluid teamso">
+        <div class=" container-fluid ">
 
             <div class="row">
                 <div class="col">
                     <!-- div contact-->
-                    <h2 class="title-anchor distantdos " class="black">Contact </h2>
+                    <h2 class="title-anchor distantdos right-color">Contact </h2>
                     <div class="rightText distantuno">
                         <p>
                             05.56.51.76.60<br>
@@ -394,20 +394,34 @@
 
         <footer id="bar2">
             <div class="container">
-                <div class="row">
-                    <!--les boutons menu-->
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Programmation</h3>
-                    </a>
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Ateliers</h3>
-                    </a>
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Notre Cinéma</h3>
-                    </a>
-                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
-                        <h3>Contact</h3>
-                    </a>
+                <div class="row last-row">
+
+                    <div class="col">
+                        <section class="buttons">
+
+                            <a href="Film.html" class="btn btn-1 btnanim">
+                                <p>Programmation</p>
+                            </a>
+                    </div>
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="" class="btn btn-1 btnanim">
+                                <p>Ateliers</p>
+                            </a>
+                    </div>
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="" class="btn btn-1 btnanim">
+                                <p>Notre Cinéma</p>
+                            </a>
+                    </div>
+                    <div class="col">
+                        <section class="buttons">
+                            <a href="" class="btn btn-1 btnanim">
+                                <p>Contact</p>
+                            </a>
+                    </div>
+                   
                     
                 </div>
                 <div class="row">
@@ -427,14 +441,13 @@
                     <div class=col>
                     </div>
                 </div>
-                <div class="row">
-                    <p>Si vous avez besoin de nous contacter :
+                <div class="row ">
+                    <p class="dos">Si vous avez besoin de nous contacter :
                         09.51.99.04.80 / 05.56.51.76.60
                         contact@cinemalefestival.fr</p>
-                    <p>Notre adresse :
-                        151 Boulevard ALBERT 1er
+                    <p class="dos">Notre adresse : 151 Boulevard ALBERT 1er
                         33130 Bègles</p>
-                    <p>© 2020 Cinéma "Le Festival" de Bègles, tout droits réservés – Mentions légales – Site réalisé par
+                    <p class="uno">© 2020 Cinéma "Le Festival" de Bègles, tout droits réservés – Mentions légales – Site réalisé par
                         Dessert
                         Web</p>
                 </div>
